--- a/bonjour.html
+++ b/bonjour.html
@@ -7,6 +7,6 @@
 	<body>
 		<h1>Coucou!</h1>
 		<p>Ceci est mon premier paragraphe en html versionné.</p>
-		<p>Faudrait penser à faire quelque chose ici.</p>
+		<p>Faudrait penser à saluer le lecteur qui nous lit.</p>
 	</body>
 </html>
