--- a/bonjour.html
+++ b/bonjour.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Coucou!</h1>
+		<h1>Aha!</h1>
 		<p>Ceci est mon premier paragraphe en html versionné.</p>
 		<p>Faudrait penser à faire quelque chose ici.</p>
 	</body>
