--- a/bonjour.html
+++ b/bonjour.html
@@ -8,5 +8,6 @@
 		<h1>Aha!</h1>
 		<p>Ceci est mon premier paragraphe en html versionné.</p>
 		<p>Faudrait penser à saluer le lecteur qui nous lit.</p>
+		<p>Encore un nouveau paragraphe.</p>
 	</body>
 </html>
