--- a/bonjour.html
+++ b/bonjour.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Aha!</h1>
 		<p>Ceci est mon premier paragraphe en html versionné.</p>
-		<p>Faudrait penser à saluer le lecteur qui nous lit.</p>
+		<p>Faudrait penser à mettre un peu de style.</p>
 		<p>Encore un nouveau paragraphe.</p>
 	</body>
 </html>
